<resources>
    <string name="app_name">FamilyLooped</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_activity_slide_show">ActivitySlideShow</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="familylooped">\@familylooped.com</string>
    <string name="title_activity_manually_add_contact">ManuallyAddContactActivity</string>
    <string name="setting_photo_top">Choose the speed of your personal loop</string>
    <string name="setting_photo_bottom">Choose the images you want to display on your tablet</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="everything">Everything</string>
</resources>